--- a/sample.tex
+++ b/sample.tex
@@ -303,7 +303,35 @@ static void mptcp_v4_subflows(struct sock *meta_sk, const struct mptcp_loc4 *loc
 % 书籍附件
 \backmatter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+% 作者简历与科研成果页，应放在backmatter之后
+\begin{resume}
+% 论文作者身份简介，一句话即可。
+\begin{authorinfo}
+\noindent 韦小宝，男，汉族，1985年11月出生，江苏省扬州人。
+\end{authorinfo}
+% 论文作者教育经历列表，按日期从近到远排列，不包括将要申请的学位。
+\begin{education}
+\item[2007年9月 --- 2010年6月] 南京大学计算机科学与技术系 \hfill 硕士
+\item[2003年9月 --- 2007年6月] 南京大学计算机科学与技术系 \hfill 本科
+\end{education}
+% 论文作者在攻读学位期间所发表的文章的列表，按发表日期从近到远排列。
+\begin{publications}
+\item Xiaobao Wei, Jinnan Chen, ``Voting-on-Grid Clustering for Secure
+  Localization in Wireless Sensor Networks,'' in \textsl{Proc. IEEE International
+    Conference on Communications (ICC) 2010}, May. 2010.
+\item Xiaobao Wei, Shiba Mao, Jinnan Chen, ``Protecting Source Location Privacy
+  in Wireless Sensor Networks with Data Aggregation,'' in \textsl{Proc. 6th
+    International Conference on Ubiquitous Intelligence and Computing (UIC)
+    2009}, Oct. 2009.
+\end{publications}
+% 论文作者在攻读学位期间参与的科研课题的列表，按照日期从近到远排列。
+\begin{projects}
+\item 国家自然科学基金面上项目``无线传感器网络在知识获取过程中的若干安全问题研究''
+（课题年限~2010年1月 --- 2012年12月），负责位置相关安全问题的研究。
+\item 江苏省知识创新工程重要方向项目下属课题``下一代移动通信安全机制研究''
+（课题年限~2010年1月 --- 2010年12月），负责LTE/SAE认证相关的安全问题研究。
+\end{projects}
+\end{resume}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 生成《学位论文出版授权书》页面，应放在最后一页
