--- a/sample.tex
+++ b/sample.tex
@@ -209,13 +209,13 @@
 \begin{figure}[htbp]
 \begin{minipage}[t]{0.5\textwidth}
 \centering
-\includegraphics[width=0.9\textwidth]{./pictures/github.jpg}
+\includegraphics[width=0.9\textwidth]{./figure/github.jpg}
 \caption{共享拥塞链路}
 \label{lab:1}
 \end{minipage}%
 \begin{minipage}[t]{0.5\textwidth}
 \centering
-\includegraphics[width=0.9\textwidth]{./pictures/github.jpg}
+\includegraphics[width=0.9\textwidth]{./figure/github.jpg}
 \caption{多跳中继}
 \label{lab:2}
 \end{minipage}
@@ -229,13 +229,13 @@
 \begin{figure}[htbp]
 \begin{minipage}[t]{0.5\textwidth}
 \centering
-\includegraphics[width=0.9\textwidth]{./pictures/github.jpg}
+\includegraphics[width=0.9\textwidth]{./figure/github.jpg}
 \caption{实验硬件设备总览}
 \label{img:1}
 \end{minipage}
 \begin{minipage}[t]{0.5\textwidth}
 \centering
-\includegraphics[width=0.9\textwidth]{./pictures/github.jpg}
+\includegraphics[width=0.9\textwidth]{./figure/github.jpg}
 \caption{实验测量示意图}
 \label{img:2}
 \end{minipage}
