--- a/sample.tex
+++ b/sample.tex
@@ -78,7 +78,7 @@
 % 设置论文的英文封面
 
 % 论文的英文标题，不可换行
-\englishtitle{\LaTeX NJU thesis template }
+\englishtitle{\LaTeX \;  NJU thesis template }
 % 论文作者姓名的拼音
 \englishauthor{Author}
 % 导师姓名职称的英文
