--- a/sample.tex
+++ b/sample.tex
@@ -6,6 +6,7 @@
 %% njuthesis 文档类的可选参数有：
 %%   nobackinfo 取消封二页导师签名信息。注意，按照南大的规定，是需要签名页的。
 %%   phd/master/bachelor 选择博士/硕士/学士论文
+
 \usepackage{lipsum}
 \usepackage{listings} 
 \usepackage{xcolor}
@@ -37,8 +38,42 @@
 }
 
 
-\hyphenpenalty=5000
-\tolerance=1000
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 设置《国家图书馆封面》的内容，仅博士论文才需要填写
+
+% 设置论文按照《中国图书资料分类法》的分类编号
+\classification{0175.2}
+% 论文的密级。需按照GB/T 7156-2003标准进行设置。预定义的值包括：
+% - \openlevel，表示公开级：此级别的文献可在国内外发行和交换。
+% - \controllevel，表示限制级：此级别的文献内容不涉及国家秘密，但在一定时间内
+%   限制其交流和使用范围。
+% - \confidentiallevel，表示秘密级：此级别的文献内容涉及一般国家秘密。
+% - \clasifiedlevel，表示机密级：此级别的文献内容涉及重要的国家秘密 。
+% - \mostconfidentiallevel，表示绝密级：此级别的文献内容涉及最重要的国家秘密。
+% 此属性可选，默认为\openlevel，即公开级。
+\securitylevel{\controllevel}
+% 设置论文按照《国际十进分类法UDC》的分类编号
+% 该编号可在下述网址查询：http://www.udcc.org/udcsummary/php/index.php?lang=chi
+\udc{004.72}
+% 国家图书馆封面上的论文标题第一行，不可换行。此属性可选，默认值为通过\title设置的标题。
+\nlctitlea{数据中心}
+% 国家图书馆封面上的论文标题第二行，不可换行。此属性可选，默认值为空白。
+\nlctitleb{网络模型研究}
+% 国家图书馆封面上的论文标题第三行，不可换行。此属性可选，默认值为空白。
+\nlctitlec{}
+% 导师的单位名称及地址
+\supervisorinfo{南京大学计算机科学与技术系~~南京市汉口路22号~~210093}
+% 答辩委员会主席
+\chairman{张三丰~~教授}
+% 第一位评阅人
+\reviewera{阳顶天~~教授}
+% 第二位评阅人
+\reviewerb{张无忌~~副教授}
+% 第三位评阅人
+\reviewerc{黄裳~~教授}
+% 第四位评阅人
+\reviewerd{郭靖~~研究员}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 设置论文的中文封面
