update for winedt

--- a/sample.tex
+++ b/sample.tex
@@ -1,3 +1,6 @@
+% !Mode:: "TeX:UTF-8"
+%# -*- coding:utf-8 -*-
+
 %% 使用 njuthesis 文档类生成南京大学学位论文的示例文档
 %%作者：njuhan: https://github.com/njuHan
 %% 部分提纲取自njuhan的本科毕业论文
