--- a/sample.tex
+++ b/sample.tex
@@ -82,10 +82,10 @@
 % 设置论文的中文封面
 
 % 论文标题，不可换行
-\title{南大本科毕业论文\LaTeX 模板}
+%\title{南大本科毕业论文\LaTeX 模板}
 % 如果论文标题过长，可以分两行，第一行用\titlea{}定义，第二行用\titleb{}定义，将上面的\title{}注释掉
-% \titlea{半轻衰变$D^+\to \omega(\phi)e^+\nu_e$的研究}
-% \titleb{和弱衰变$J/\psi \to D_s^{(*)-}e^+\nu_e$的寻找}
+ \titlea{半轻衰变$D^+\to \omega(\phi)e^+\nu_e$的研究}
+ \titleb{和弱衰变$J/\psi \to D_s^{(*)-}e^+\nu_e$的寻找}
 
 % 论文作者姓名
 \author{作者}
