fix title bug in .cls

--- a/sample.tex
+++ b/sample.tex
@@ -81,11 +81,16 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 设置论文的中文封面
 
-% 论文标题，不可换行
-%\title{南大本科毕业论文\LaTeX 模板}
-% 如果论文标题过长，可以分两行，第一行用\titlea{}定义，第二行用\titleb{}定义，将上面的\title{}注释掉
- \titlea{半轻衰变$D^+\to \omega(\phi)e^+\nu_e$的研究}
- \titleb{和弱衰变$J/\psi \to D_s^{(*)-}e^+\nu_e$的寻找}
+% 单行论文标题，不可换行
+\title{南大本科毕业论文\LaTeX 模板}
+
+% 如果论文标题过长，可以分两行，第一行用\titlea{}定义，第二行用\titleb{}定义，
+% 使用以下3行：
+\title{} %不要修改这一行，它用于覆盖单行标题内容为空
+\titlea{第一行标题写这里}  %第一行标题写这里
+\titleb{第二行标题写这里} %第二行标题写这里
+% 注意： \title 不能都注释，它用于控制标题选择双行还是单行。\title{}如果内容为空，则编译\titlea{},titleb{}双行标题，否则编译单行标题
+
 
 % 论文作者姓名
 \author{作者}
