update abstract title

--- a/sample.tex
+++ b/sample.tex
@@ -147,10 +147,10 @@
 
 % 设置中文摘要页面的论文标题及副标题的第一行。
 % 此属性可选，其默认值为使用|\title|命令所设置的论文标题
-% \abstracttitlea{数据中心网络模型研究}
+\abstracttitlea{标题第一行}
 % 设置中文摘要页面的论文标题及副标题的第二行。
 % 此属性可选，其默认值为空白
-% \abstracttitleb{}
+\abstracttitleb{标题第二行用于长标题换行}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 设置论文的英文摘要
