add single figure example

--- a/sample.tex
+++ b/sample.tex
@@ -274,18 +274,10 @@
 \lipsum[1]
 
 \begin{figure}[htbp]
-\begin{minipage}[t]{0.5\textwidth}
-\centering
-\includegraphics[width=0.9\textwidth]{./figure/github.jpg}
-\caption{共享拥塞链路}
-\label{lab:1}
-\end{minipage}%
-\begin{minipage}[t]{0.5\textwidth}
-\centering
-\includegraphics[width=0.9\textwidth]{./figure/github.jpg}
-\caption{多跳中继}
-\label{lab:2}
-\end{minipage}
+  \centering
+  \includegraphics[width=0.6\linewidth]{./figure/github.jpg}
+  \caption{单图示例}
+  \label{fig:system}
 \end{figure}
 
 
