--- a/sample.tex
+++ b/sample.tex
@@ -253,8 +253,16 @@
 
 \lipsum[1]
 \begin{itemize}
-\item 第一章，
-\item 第二章，
+\item 一级item
+ \begin{itemize}
+ \item 二级item
+	\begin{itemize}
+	\item 三级item
+
+	\end{itemize}
+
+ \end{itemize}
+\item 一级item
 
 \end{itemize}
 
