--- a/sample.tex
+++ b/sample.tex
@@ -288,6 +288,19 @@
   \label{fig:system}
 \end{figure}
 
+\chapter{算法}
+
+\begin{algorithm}[htbp]
+  \caption{算法名字}
+  \label{alg:alg1}
+  \begin{algorithmic}[1]
+        \REQUIRE 这是输入      
+        \ENSURE 这是输出
+        \WHILE {flag}
+		      \STATE 这是语句
+        \ENDWHILE
+  \end{algorithmic}
+\end{algorithm}
 
 \chapter{实验验证}
 
