--- a/sample.tex
+++ b/sample.tex
@@ -5,7 +5,7 @@
 %%作者：njuhan: https://github.com/njuHan
 %% 部分提纲取自njuhan的本科毕业论文
 
-\documentclass[winfonts,bachelor,oneside,nobackinfo]{njuthesis}
+\documentclass[winfonts,bachelor,twoside,nobackinfo]{njuthesis}
 %% njuthesis 文档类的可选参数有：
 %%   winfonts, linuxfonts, macfonts, adobefonts winfonts 选项使得文档使用Windows 系统提供的字体；linuxfonts 选项使得文档使用Linux 系统提供的字体；macfonts 选项使得文档使用Mac 系统提供的字体；adobefonts 选项使得文档使用Adobe提供的OTF中文字体(需自行下载安转)
 %%   nobackinfo 取消封二页导师签名信息。注意，按照南大的规定，是需要签名页的。
