--- a/sample.tex
+++ b/sample.tex
@@ -240,10 +240,10 @@
 使用.bib文件管理参考文献引用，引用示例：\cite{BHR12}.\par
 \lipsum[1]
 
-\section{MPTCP拥塞控制机制}\label{subsec:mptcp_conges}
+\section{Section}\label{subsec:mptcp_conges}
 \lipsum[1]
 
-\section{研究的目的与意义}
+\section{Section}
 \lipsum[1]
 
 
@@ -272,13 +272,13 @@
 
 \lipsum[1]
 
-\chapter{MPTCP速率分配问题分析}
+\chapter{chapter}
 
 \lipsum[1]
 
-\section{MPTCP速率分配场景}\label{sec:rate}
+\section{section}\label{sec:rate}
 \lipsum[1]
-\subsection{负载均衡}
+\subsection{subsection}
 \lipsum[1]
 
 \begin{figure}[htbp]
@@ -347,7 +347,7 @@
 % 致谢，应放在《结论》之后
 \begin{acknowledgement}
 %thanks
-时光荏苒，在南京大学的本科的学习生活即将结束，四年的时间转瞬即逝，这几年的经历必将成为我人生宝贵的财富。在此论文完成之际，谨向这几年来帮助我的老师和同学表达最衷心的感
+\lipsum[1]
 
 \end{acknowledgement}
 
