--- a/sample.tex
+++ b/sample.tex
@@ -5,7 +5,7 @@
 %%作者：njuhan: https://github.com/njuHan
 %% 部分提纲取自njuhan的本科毕业论文
 
-\documentclass[winfonts,bachelor,twoside,nobackinfo]{njuthesis}
+\documentclass[winfonts,bachelor,twoside]{njuthesis}
 %% njuthesis 文档类的可选参数有：
 %%   winfonts, linuxfonts, macfonts, adobefonts winfonts 选项使得文档使用Windows 系统提供的字体；linuxfonts 选项使得文档使用Linux 系统提供的字体；macfonts 选项使得文档使用Mac 系统提供的字体；adobefonts 选项使得文档使用Adobe提供的OTF中文字体(需自行下载安转)
 %%   phd/master/bachelor 选择博士/硕士/学士论文
@@ -102,7 +102,7 @@
 % 论文作者电子邮件地址
 \email{sample@smail.nju.edu.cn}
 % 论文作者学生证号
-\studentnum{12xxxxxxx}
+\studentnum{xxxxxxx}
 % 论文作者入学年份（年级）
 \grade{2012}
 % 导师姓名职称
@@ -118,9 +118,9 @@
 % 论文作者所在学校或机构的名称。此属性可选，默认值为``南京大学''。
 \institute{南京大学}
 % 论文的提交日期，需设置年、月、日。
-\submitdate{2016年\qquad 月\qquad 日}
+\submitdate{xxxx年 xx 月 xx 日}
 % 论文的答辩日期，需设置年、月、日。
-\defenddate{2016年\qquad 月\qquad 日}
+\defenddate{xxxx年 xx 月 xx 日}
 % 论文的定稿日期，需设置年、月、日。此属性可选，默认值为最后一次编译时的日期，精确到日。
 \date{2016年6月8日}
 
