--- a/sample.tex
+++ b/sample.tex
@@ -95,8 +95,9 @@
 \submitdate{xxxx年 xx 月 xx 日}
 % 论文的答辩日期，需设置年、月、日。
 \defenddate{xxxx年 xx 月 xx 日}
-% 论文的定稿日期，需设置年、月、日。此属性可选，默认值为最后一次编译时的日期，精确到日。
-\date{2016年6月8日}
+% 论文的定稿日期，需设置年、月、日。
+% 此属性可选，若注释\date{}，则默认值为最后一次编译时的日期，精确到日。
+% \date{2019年5月20日}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 设置论文的英文封面
@@ -115,9 +116,9 @@
 \englishinstitute{Nanjing University}
 % 论文完成日期的英文形式，它将出现在英文封面下方。需设置年、月、日。日期格式使用美国的日期
 % 格式，即``Month day, year''，其中``Month''为月份的英文名全称，首字母大写；``day''为
-% 该月中日期的阿拉伯数字表示；``year''为年份的四位阿拉伯数字表示。此属性可选，默认值为最后
-% 一次编译时的日期。
-\englishdate{May 20th, 2016}
+% 该月中日期的阿拉伯数字表示；``year''为年份的四位阿拉伯数字表示。
+% 此属性可选，若注释掉\englishdate{}，则默认值为最后一次编译时的日期。
+% \englishdate{May 20, 2019}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 设置论文的中文摘要
