--- a/sample.tex
+++ b/sample.tex
@@ -1,9 +1,8 @@
 % !Mode:: "TeX:UTF-8"
 %# -*- coding:utf-8 -*-
 
-%% 使用 njuthesis 文档类生成南京大学学位论文的示例文档
-%%作者：njuhan: https://github.com/njuHan
-%% 部分提纲取自njuhan的本科毕业论文
+%% 南京大学学位论文的示例文档
+%% 作者：njuhan: https://github.com/njuHan
 
 \documentclass[winfonts,bachelor,twoside]{njuthesis}
 %% njuthesis 文档类的可选参数有：
@@ -139,6 +138,11 @@
 % 设置英文摘要页面的论文标题及副标题的第二行。
 % 此属性可选，其默认值为空白
 \englishabstracttitleb{nglishabstracttitleb}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% 盲审命令，空白字段设置请看 .cls文件 \newcommand*{\blind}
+%% 此外，请按照盲审要求自行去掉个人简历、致谢等页面中的个人信息
+%\blind
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
