--- a/sample.tex
+++ b/sample.tex
@@ -35,9 +35,9 @@
 % 该编号可在下述网址查询：http://www.udcc.org/udcsummary/php/index.php?lang=chi
 \udc{004.72}
 % 国家图书馆封面上的论文标题第一行，不可换行。此属性可选，默认值为通过\title设置的标题。
-\nlctitlea{数据中心}
+\nlctitlea{论文标题第一行}
 % 国家图书馆封面上的论文标题第二行，不可换行。此属性可选，默认值为空白。
-\nlctitleb{网络模型研究}
+\nlctitleb{论文标题第二行}
 % 国家图书馆封面上的论文标题第三行，不可换行。此属性可选，默认值为空白。
 \nlctitlec{}
 % 导师的单位名称及地址
@@ -58,13 +58,13 @@
 % 设置论文的中文封面
 
 % 单行论文标题，不可换行
-\title{南大本科毕业论文\LaTeX 模板}
+\title{南京大学毕业论文\LaTeX 模板}
 
 % 如果论文标题过长，可以分两行，第一行用\titlea{}定义，第二行用\titleb{}定义，
 % 使用以下3行：
-\title{} %不要修改这一行，它用于覆盖单行标题内容为空
-\titlea{第一行标题写这里}  %第一行标题写这里
-\titleb{第二行标题写这里} %第二行标题写这里
+%\title{} %用于覆盖单行标题内容为空
+%\titlea{长标题第一行}  %第一行标题写这里
+%\titleb{长标题第二行用于长标题换行} %第二行标题写这里
 % 注意： \title 不能都注释，它用于控制标题选择双行还是单行。\title{}如果内容为空，则编译\titlea{},titleb{}双行标题，否则编译单行标题
 
 
@@ -379,10 +379,8 @@ int main()
 \end{publications}
 % 论文作者在攻读学位期间参与的科研课题的列表，按照日期从近到远排列。
 \begin{projects}
-\item 国家自然科学基金面上项目``无线传感器网络在知识获取过程中的若干安全问题研究''
-（课题年限~2010年1月 --- 2012年12月），负责位置相关安全问题的研究。
-\item 江苏省知识创新工程重要方向项目下属课题``下一代移动通信安全机制研究''
-（课题年限~2010年1月 --- 2010年12月），负责LTE/SAE认证相关的安全问题研究。
+\item 国家自然科学基金面上项目``问题研究''
+（课题年限~2010年1月 --- 2012年12月），负责相关问题的研究。
 \end{projects}
 \end{resume}
 
