--- a/sample.tex
+++ b/sample.tex
@@ -3,6 +3,7 @@
 
 %% 南京大学学位论文的示例文档
 %% 作者：njuhan: https://github.com/njuHan
+%% 源模版repo: https://github.com/njuHan/njuthesis-nju-thesis-template
 
 \documentclass[winfonts,bachelor,twoside]{njuthesis}
 %% njuthesis 文档类的可选参数有：
