update subcaption set

--- a/sample.tex
+++ b/sample.tex
@@ -16,7 +16,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % set up labelformat and labelsep for subfigure 详见： http://www.latexstudio.net/archives/8652.html
-\captionsetup[subfigure]{labelformat=simple, labelsep=colon}
+\captionsetup[subfigure]{labelformat=simple, labelsep=space}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 设置《国家图书馆封面》的内容，仅博士论文才需要填写
